# sec-int

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
data/raw/: combined.chunked.jsonl  mitre.jsonl  mitre_chunked.jsonl  owasp.chunked.jsonl  owasp.jsonl  owasp_chunked.jsonl
docs/: ingestion.md  master-spec.md
docs/epic-1/: EPIC-1_Ticket-1.1_Setup-Python-Project.md  EPIC-1_Ticket-1.2_Configure-Vector-DB-Docker.md  EPIC-1_Ticket-1.3_Centralized-Config-and-Secrets.md  EPIC-1_Ticket-1.4_CI-CD-Lint-Type-Tests.md  epic1.md
docs/epic-2/: EPIC-2_Ticket-2.1_MITRE-ATTACK-Ingestion.md  EPIC-2_Ticket-2.2_OWASP-Top10-Ingestion.md  EPIC-2_Ticket-2.3_Text-Chunking-Strategy.md  EPIC-2_Ticket-2.4_Embeddings-and-DB-Population.md  epic2.md
docs/epic-3/: EPIC-3_Ticket-3.1_Pydantic-Models.md  EPIC-3_Ticket-3.2_Core-Agent.md  EPIC-3_Ticket-3.3_Retrieval-Tool.md  EPIC-3_Ticket-3.4_Tool-Integration.md  epic3.md
docs/epic-4/: EPIC-4_Ticket-4.1_Scan-Input-Handler.md  EPIC-4_Ticket-4.2_Vulnerability-ID-Parser.md  EPIC-4_Ticket-4.3_Orchestrator-Analyze-Report.md  epic4.md
docs/epic-5/: EPIC-5_Ticket-5.1_System-Prompt.md  EPIC-5_Ticket-5.2_Structured-Output-Model.md  EPIC-5_Ticket-5.3_Final-Report-Formatter.md  epic5.md
docs/epic-6/: EPIC-6_Ticket-6.1_FastAPI-Endpoint.md  epic6.md  (+2 more)
scripts/: __init__.py
tests/: __init__.py  test_agent.py  test_chunking.py  test_hello.py  test_ingest_input.py  test_ingest_mitre.py  test_ingest_owasp.py  test_models.py  test_orchestrator.py  test_parser.py  test_populate_db.py
(+16 files in other folders)
